--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.github.joanerson</groupId>
 	<artifactId>aws_projecto01</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>1.2.0</version>
 	<name>aws_projecto01</name>
 	<description>Projeto 01</description>
 	<properties>
@@ -24,6 +24,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
 		<dependency>
