--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   application:
-    name: 'aws_projecto01'
+    name: 'aws_project01'
   datasource:
-    url: 'jdbc:mariadb://localhost:3306/aws_project01'
-    username: 'username'
-    password: 'password'
-
+    url: ${DATABASE_URL:jdbc:mariadb://localhost:3306/aws_project01}
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:1234567}
   jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    show-sql: false
     hibernate:
-      ddl-auto=update:
-    datasource-platform: og.hibernate.dialect.MySQLInnoDBDialect
+      ddl-auto: update
